# dxfvec

./: .dockerignore  .gitignore  DEPLOY.md  DXFvec BYOK Image Vectorization & DXF Conversion – Full Spec.md  DXFvec_Complete_Documentation.md  Dockerfile  LAUNCH.md  NEXT-DIRECTIONS.md  Procfile  README.md  SESSION_SUMMARY.md  agent-overview.html  build-sheet.json  docker-compose.yml  dxfvec_prd_trd.md  first_prompt.txt  outcome.md  pyproject.toml  render.yaml  requirements.txt  test_smoke.py  vercel.json
.github/workflows/: keep_alive.yml
.opencode/: workflow.md
cma/: agent.json  environment.json  kickoff.json
evals/: run-evals.sh
evals/case-01/: generate_test.py
evals/case-02/: generate_shop.py
src/dxfvec/: __init__.py  ai_enhancer.py  cli.py  cloud_providers.py  crew_pipeline.py  curve_fitting.py  dxf_writer.py  engines.py  path_model.py  pipeline.py  preprocess.py  providers.py  qa_report.py  vectorizer.py  web.py
tests/: test_curve_fitting.py  test_dxf_writer.py  test_path_model.py  test_qa_report.py
