[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dxfvec"
version = "2.0.0"
description = "100% free image vectorization and DXF conversion — no API keys required"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["dxf", "cad", "vectorization", "engineering", "metal-fabrication", "opencv", "free", "vtracer", "byok"]
dependencies = [
    "opencv-python>=4.9",
    "Pillow>=10",
    "numpy>=1.26",
    "ezdxf>=1.3",
    "scikit-image>=0.22",
    "click>=8.1",
    "vtracer>=0.6",
    "requests>=2.31",
]

[project.optional-dependencies]
web = ["flask>=3.0", "flask-cors>=4.0", "gunicorn>=21.2"]
crew = ["crewai>=0.55", "litellm>=1.40"]
cloud = ["requests>=2.31"]

[project.scripts]
dxfvec = "dxfvec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
